--- a/mtm-6201-portfolio/css/main.css
+++ b/mtm-6201-portfolio/css/main.css
@@ -51,3 +51,19 @@ table {
 
 /* ---------- MOBILE ---------- */
 
+body {
+	font-family: Arial, Helvetica, sans-serif;
+}
+
+.logo {
+	display: block;
+	margin-left: auto;
+	margin-right: auto;
+}
+
+nav .footer-nav {
+	text-align: center;
+}
+
+/* ---------- TABLET ---------- */
+
