--- a/mtm-6201-portfolio/css/main.css
+++ b/mtm-6201-portfolio/css/main.css
@@ -55,13 +55,45 @@ body {
 	font-family: Arial, Helvetica, sans-serif;
 }
 
+header {
+	background-color: beige;
+}
+
 .logo {
 	display: block;
 	margin-left: auto;
 	margin-right: auto;
 }
 
+.main-nav a {
+	text-align: center;
+	text-decoration: none;
+}
 
+footer {
+	background-color: burlywood;
+}
 
+.footer-nav a {
+	float: none;
+	display: block;
+	text-decoration: none;
+}
+
+a:link {
+	color: black;
+}
+
+a:visited {
+	color: black;
+}
+
+a:hover {
+	color: black;
+}
+
+a:active {
+	color: black;
+}
 /* ---------- TABLET ---------- */
 
